# tract-geolocation-formatter

./: .gitignore  CLA  README.md  pyproject.toml
.claude/skills/close-spec/: SKILL.md
.claude/skills/generate-plan/: SKILL.md
.claude/skills/generate-spec/: SKILL.md
.claude/skills/generate-tasks/: SKILL.md
.claude/skills/implement-task/: SKILL.md
.claude/skills/pre-review/: SKILL.md
.claude/skills/resume-spec/: SKILL.md
.claude/skills/start-spec/: SKILL.md
.specify/: README.md
.specify/constitutions/: constitution.md
.specify/templates/: clarify.md  decision-log.md  plan.md  spec.md  tasks.md
tests/: test_build_expression_value.py  test_build_output_fields.py  test_master_data_writer.py  test_self_intersection_coordinates.py
tract geolocation formatter/: Makefile  README.html  README.txt  TRACT_Geolocation_Formatter.py  TRACT_Geolocation_Formatter_dialog_base.py  TRACT_Geolocation_Formatter_dialog_base.ui  metadata.txt  original_TRACT_Geolocation_Formatter copy.py  original_TRACT_Geolocation_Formatter_dialog copy.py  original_TRACT_Geolocation_Formatter_dialog_base.ui copy  pb_tool.cfg
tract geolocation formatter/test/: test_TRACT Geolocation Formatter_dialog.py  test_resources.py
tract_geolocation_formatter/: LICENSE  TRACT_Geolocation_Formatter.py  TRACT_Geolocation_Formatter_dialog.py  TRACT_Geolocation_Formatter_dialog_base.py  TRACT_Geolocation_Formatter_dialog_base.ui  __init__.py  metadata.txt  resources.qrc  resources_rc.py
tract_geolocation_formatter/templates/: farmer_group_master_data_template.xlsx  farms_master_data_template.xlsx
(+40 files in other folders)
