[tool.poetry]
name = "tract-geolocation-formatter"
version = "0.1.0"
description = ""
authors = ["Luis Carrasco luiscartor@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyqt5 = "^5.15.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
